@@ -12,6 +12,7 @@ Version 0.0.4b (in progress)
 * [Tweaked] Behaviour of dash_if_empty function.  Removed it where it was serving no purpose.
 * [Tweaked] Default privacy policy updates.
 * [Removed] Requirements for npm and deprecated zip modules.
+* [Removed] Install themes from URL.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
